# caleidoscopio

./: .gitignore  README.md  index.html  index.js  package-lock.json  package.json  update_gh_pages.sh  vite.config.js  wasm_build.sh
docs/: index.html
docs/assets/: caleidoscopio_bg.16f5e625.wasm  caleidoscopio_bg.b1f662bf.wasm  index.1ad00b7c.js  index.d027704f.js  index.eefeb4fe.css
docs/rust/pkg/: caleidoscopio.d.ts  caleidoscopio.js  caleidoscopio_bg.wasm.d.ts
rust/: Cargo.toml
rust/src/: core.rs  lib.rs
rust/src/core/: game_core.rs
src/: universe.js
